--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "octoper/cuzzle": "3.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "8.*|9.*",
+        "phpunit/phpunit": "8.*|9.*|10.5.*|11.*",
         "phpstan/phpstan": "*",
         "symfony/var-dumper": "*",
         "phpexperts/laravel-env-polyfill": "*",
